# paraml

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml  unit-tests.yml
paraml/: __init__.py  parse.py
tests/: test_parse.py  test_yams.py
tests/params/: a.yaml  a_error.yaml  a_unused.yaml  b.yaml  c.yaml  defs.yaml
tests/params/b/: neighbors.yaml
yams/: __init__.py  parse.py
