[tool.poetry]
name = "yams"
version = "0.1.0"
description = ""
authors = ["mcmcgrath13 <m.c.mcgrath13@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
oyaml = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
mypy = "^0.790"
flake8 = "^3.8.4"
black = "^20.8b1"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
