[tool.poetry]
name = "paraml"
version = "0.1.1"
description = "a parameter definition language and parser - all in yaml"
authors = [
    "mcmcgrath13",
    "s-bessey"
]
license = "GPLv3"
readme = "README.md"
homepage = "https://github.com/marshall-lab/paraml"
repository = "https://github.com/marshall-lab/paraml"
keywords = ["yaml", "params", "parameters", "config", "validation"]
classifiers = [
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.6"
oyaml = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
mypy = "^0.790"
flake8 = "^3.8.4"
black = "^20.8b1"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
